--- a/wp-content/themes/gymedge/assets/css/stylef488.css
+++ b/wp-content/themes/gymedge/assets/css/stylef488.css
@@ -302,18 +302,17 @@ h6 {
 	margin: 15px 0;
 }
 .site-header .site-branding {
-	margin: 23px 0;
+	margin: 21px 0;
 }
 .site-header .site-branding a.light-logo {
 	display: none;
 }
 .site-header .site-branding a img {
 	display: block;
-	max-height: 53px;
-	width: auto;
+	height: 45px;
 }
 .stick .site-header .site-branding a img{
-	max-height: 35px;
+	max-height: 55px;
 }
 
 /*-------------------------------------
